body overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
     --breakpoint-xl: 1170px;
 }
 
+body{
+    overflow-x : hidden;
+}
+
 @utility container{
     margin: auto
 }
